# ai-agent-samples

./: README.md  function_calling.py  requirements.txt
function_call/: function_calling.py  pyproject.toml
mcp-server-test/: client.py  main.py  pyproject.toml  requirements.txt
