[project]
name = "function-call"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.8.0",
    "certifi==2025.1.31",
    "distro==1.9.0",
    "flake8==7.1.2",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "idna==3.10",
    "jiter==0.8.2",
    "mccabe==0.7.0",
    "openai==1.65.5",
    "pycodestyle==2.12.1",
    "pydantic==2.10.6",
    "pydantic-core==2.27.2",
    "pyflakes==3.2.0",
    "sniffio==1.3.1",
    "tqdm==4.67.1",
    "typing-extensions==4.12.2",
]
